ADD :: notion TIL

--- a/C# 배우기 6c9b7/기본 입ᄎ ed0c6/입력 7b8b3.md
+++ b/C# 배우기 6c9b7/기본 입ᄎ ed0c6/입력 7b8b3.md
@@ -63,3 +63,17 @@
     3. Double (실수)
     4. Char (문자)
 - 다만 이것보단 Convert와 같은 기능을 하는 **자료형태.Parse()를 사용하는 것을 추천한다.**
+
+## ◼️ default
+
+---
+
+- 변수를 초기화 할 때 default를 넣는다면 해당 변수에 기본값을 넣는다는 이야기이다.
+- 숫자는 0을 논리형은 false를 문자는 null을 가진다.
+
+## 🖇️ 튜플 리터럴
+
+---
+
+- 튜플 리터럴은 변수 하나에 둘 이상의 값을 입력받게 할 수 있다.
+- var t = (100, 200); 에서 t.Item1은 100이고 t.Item2는 200이다.
