--- a/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/연산자 ddfffbcf7c834a4a9b289608e4fa6ec7/연산자 072a7de9e9bc476f82ff1cc7ec8387f5.md
+++ b/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/연산자 ddfffbcf7c834a4a9b289608e4fa6ec7/연산자 072a7de9e9bc476f82ff1cc7ec8387f5.md
@@ -43,13 +43,13 @@
 
 ---
 
-- 증감연산자는 변수에 1을 더하거나 빼주는 연산자이다.
-- ++ / - -로 이루어져 있으며, 변수 앞에 있으면 전위연산자, 뒤에 붙으면 후위연산자이다.
+- 증감연산자는 **변수에** **1을 더하거나 빼주는 연산자**이다.
+- **++ / - -**로 이루어져 있으며, 변수 앞에 있으면 **전위연산자**, 뒤에 붙으면 **후위연산자**이다.
 
 ## 이진수 출력
 
 ---
 
-- x = 10의 이진수를 나타내고 싶다면 Convert.ToString(x, 2)를 입력해야된다.
-- 이 때 앞의 자리가 0 이라면 생략하기 때문에 보기 쉽도록 뒤에 .PadLeft(4, ‘0’)을 입력하면 4비트로 표현된다.
-- Convert.ToString() .PadLeft()는 공식이라 생각하고 외우면 편하다.
+- x = 10의 이진수를 나타내고 싶다면 **Convert.ToString(x, 2)**를 입력해야된다.
+- 이 때 앞의 자리가 0 이라면 생략하기 때문에 보기 쉽도록 뒤에 **.PadLeft(4, ‘0’)**을 입력하면 4비트로 표현된다.
+- **Convert.ToString() .PadLeft()**는 공식이라 생각하고 외우면 편하다.
