--- a/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/닷넷 API 28ac564ae61440d881efb20b83da6500.md
+++ b/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/닷넷 API 28ac564ae61440d881efb20b83da6500.md
@@ -7,3 +7,5 @@ C#의 꽃이라 할 수 있는 닷넷의 기능들을 정리한 페이지.
 ---
 
 [클래스](%E1%84%83%E1%85%A1%E1%86%BA%E1%84%82%E1%85%A6%E1%86%BA%20API%2028ac564ae61440d881efb20b83da6500/%E1%84%8F%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A2%E1%84%89%E1%85%B3%2054496018dde041d39132d8b4942d4e9d.md)
+
+[구조체](%E1%84%83%E1%85%A1%E1%86%BA%E1%84%82%E1%85%A6%E1%86%BA%20API%2028ac564ae61440d881efb20b83da6500/%E1%84%80%E1%85%AE%E1%84%8C%E1%85%A9%E1%84%8E%E1%85%A6%20cce366e36c374a24950dcd2902f7e5c5.md)
