--- a/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/C# 기초 문법 8bee3af67eac441fab93c390e193c8f6/배열 504ba91fabba4f598f2d8e63d7ad61f9.md
+++ b/C# 배우기 6c9b79f80bb74218b4ab180e8cd31bc3/C# 기초 문법 8bee3af67eac441fab93c390e193c8f6/배열 504ba91fabba4f598f2d8e63d7ad61f9.md
@@ -21,9 +21,9 @@ C와 달라지는 점은 선언에서 갈린다.
 
 - 이름 하나로 **여러개의 변수를 저장하는 데이터 구조**이다.
 - 선언은 **int[] a = new int[배열크기];** 와 같은 형태이다.
-- 배열의 **크기는 0~배열크기-1**까지이다.
-- 배열안에 값을 넣는 것을 인덱스라고 한다.
-- 선언 동시에 인덱싱을 하고싶다면 {값}을 변수 선언 맨 뒤에 붙여주면 된다.
+- 배열의 값이 들어가는 공간 한칸 한칸을 **인덱스**라고 한다.
+- 이 인덱스는 n크기의 배열을 선언할 시 **0부터 n-1**까지 생성된다.
+- 선언 동시에 값을 넣고싶다면 **{값}**을 변수 선언 맨 뒤에 붙여주면 된다.
 - **하나라도 값을 초기화 하면 나머지 값들은 모두 0 / null로 초기화 된다.**
 
 ## 🔌 다차원 배열
