--- a/C# 활용/구조체 cce366e36c374a24950dcd2902f7e5c5.md
+++ b/C# 활용/구조체 cce366e36c374a24950dcd2902f7e5c5.md
@@ -4,14 +4,14 @@
 
 - C#의 구조체들을 정리한 페이지.
 
-## 개념
+## 🖋️ 개념
 
 ---
 
 - 구조체란 **이름 하나로 데이터를 관리하는 역할**을 한다.
 - **데이터를 보관하는 그릇**의 역할을 한다.
 
-## 구조체 만들기
+## 🔨 구조체 만들기
 
 ---
 
@@ -30,7 +30,7 @@
 - 와 같이 선언한다.
 - 구조체는 **메인함수 밖에서 선언**하고, **변수에 public을 붙이는 것은 같은 네임 스페이스에서 사용할 수 있게 해주는 것**이다. 일종의 전역변수 선언인 셈.
 
-## 구조체 사용
+## 📨 구조체 사용
 
 ---
 
