--- a/C# 활용/구조체 cce366e36c374a24950dcd2902f7e5c5/내장형 구조체 03978617724943489bf2ebbcf4554d54.md
+++ b/C# 활용/구조체 cce366e36c374a24950dcd2902f7e5c5/내장형 구조체 03978617724943489bf2ebbcf4554d54.md
@@ -7,7 +7,7 @@
 - 요즘엔 내장형 구조체를 사용자 정의 구조체보다 더 많이 사용하는 추세이다.
 - 애초에 사용자 정의 구조체는 별로 쓸일 없다.
 
-## DateTime 구조체
+## 🕐 DateTime 구조체
 
 ---
 
@@ -15,7 +15,7 @@
 - [**DateTime.Now](http://DateTime.Now) :** 현재 시간을 보여준다. (뒤에 붙일 수 있는 추가 명령어들은 제각기 의미하는 값을 보여주며 **.Year / .Month / .Day / .Hour / .Minute / .Second / .Millisecond**가 있다.)
 - [**now.Date](http://now.Date) :** 현재의 시간을 전부 표시.
 
-## TimeSpan 구조체
+## ⏱️ TimeSpan 구조체
 
 ---
 
@@ -23,7 +23,7 @@
 - **TimeSpan dday = Convert.ToDateTime(”2020-12-25”) = DateTime.Now;**
 - 위 코드는 크리스마스까지 남은 시간을 구하는 문장이다. DateTime구조체를 이용한 계산이 가능하다.
 
-## Char 구조체
+## 🆗 Char 구조체
 
 ---
 
@@ -34,7 +34,7 @@
 - **Char.IsNumber(변수) : 숫자**인지
 - **Char.IsWhireSpace(변수) : 공백**인지
 
-## Guid 구조체
+## #️⃣ Guid 구조체
 
 ---
 
