--- a/C# 기초문법/연산자/연산자 모음.md
+++ b/C# 기초문법/연산자/연산자 모음.md
@@ -46,10 +46,17 @@
 - 증감연산자는 **변수에** **1을 더하거나 빼주는 연산자**이다.
 - **++ / - -**로 이루어져 있으며, 변수 앞에 있으면 **전위연산자**, 뒤에 붙으면 **후위연산자**이다.
 
-## 이진수 출력
+## 2️⃣ 이진수 출력
 
 ---
 
 - x = 10의 이진수를 나타내고 싶다면 **Convert.ToString(x, 2)**를 입력해야된다.
 - 이 때 앞의 자리가 0 이라면 생략하기 때문에 보기 쉽도록 뒤에 **.PadLeft(4, ‘0’)**을 입력하면 4비트로 표현된다.
 - **Convert.ToString() .PadLeft()**는 공식이라 생각하고 외우면 편하다.
+
+## 🔎 is / as 연산자
+
+---
+
+- **is** 연산자는 변수가 **어떤 형태인지를 물어보는 연산자**로 “**변수 이름 is 타입**”의 형태로 쓰인다.
+- **as** 연산자는 **형변환**을 도와주는 연산자로 “**변수 이름 as 타입**” 의 형태로 쓰인다. 이 경우 올바르게 변환되지 못하면 **null값으로 저장**되게 된다.
