--- a/C# 활용/열거형 b1ea8f451f254e0f9879a4d3bd23af35.md
+++ b/C# 활용/열거형 b1ea8f451f254e0f9879a4d3bd23af35.md
@@ -2,13 +2,13 @@
 
 ---
 
-## 개념
+## 🖌️ 개념
 
 ---
 
 - 열거형은 기억하기 어려운 상수들을 기억하기 쉽게 이름 하나로 묶어 관리하는 표현 방식이다.
 
-## 열거형 만들기
+## ⚒️ 열거형 만들기
 
 ---
 
@@ -29,7 +29,7 @@
 - 열거형 변수는 0부터 인덱스를 가지며 어느 한 변수에 초기값을 입력하면 인덱스가 변한다.
 - 열거형 변수는 특별한 변수형을 가지지 않는 이름만 쓰는 상수이다.
 
-## 열거형 사용
+## 📃 열거형 사용
 
 ---
 
