--- a/C# 배우기/C# 활용/8.클래스.md
+++ b/C# 배우기/C# 활용/8.클래스.md
@@ -29,10 +29,13 @@
 - 필드 : 클래스 내에서 선언된 변수나 데이터를 담는 그릇.
 - **메서드** : 개체의 **동작이나 기능들을 정의**한다. 흔히 함수같은 것.
 - 생성자 : 개체 생성 시 미리 수행할 기능을 정의함.
+    - 생성자는 반환값을 가지지 않는다. 그리고 생성자는 **클래스의 이름과 똑같은 이름을 갖게 된다.**
+    - 전역변수를 이용하여 매개변수 지정을 할 수 있다.
 - 소멸자 : 개체의 소멸시 수행할 기능을 정의함.
+    - 클래스에서 **가장 늦게 호출되는 메서드**이다. 소멸자는 **~클래스 이름으로 작명**해야한다.
 - 속성 : 개체의 색상, 크기, 형태를 정의.
 
-[내장 클래스](%E1%84%8F%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A2%E1%84%89%E1%85%B3%2054496018dde041d39132d8b4942d4e9d/%E1%84%82%E1%85%A2%E1%84%8C%E1%85%A1%E1%86%BC%20%E1%84%8F%E1%85%B3%E1%86%AF%E1%84%85%E1%85%A2%E1%84%89%E1%85%B3%20c00c26b39df14a6ca057869bc79ff35c.md)
+[내장 클래스](https://www.notion.so/c00c26b39df14a6ca057869bc79ff35c)
 
 ## 📁 값 형식&참조 형식
 
@@ -74,3 +77,9 @@ class Example
 	}
 }
 ```
+
+## 🛠️ 개체 만들기
+
+---
+
+[개체 만들기](https://www.notion.so/ec41c1eb9795454cb322916242d98548)
