--- a/C# 배우기/C# 활용/13.제네릭.md
+++ b/C# 배우기/C# 활용/13.제네릭.md
@@ -9,6 +9,7 @@
 - 제네릭은 **특정 형식을 지정해 저장하게 해주는 데이터의 집합**이다.
 - 제네릭 속의 값들은 추가하거나 변경할 수 없으며 **Cup<T>** 에 매개변수인 **T에 따른 Cup 클래스**의 개체를 생성하는 것이다.
 - 컬렉션을 사용한다면 먼저 **using System.Collections.Generic;** 을 선언해야한다.
+- ~~자바같다.~~
 
 ## 📒 제네릭 사용하기
 
