--- a/C# 배우기/C# 기초문법/2-1.정수형 변수.md
+++ b/C# 배우기/C# 기초문법/2-1.정수형 변수.md
@@ -13,30 +13,91 @@
 
 ## 0️⃣ int
 
+---
+
 - **가장 기본적**인 정수형 선언이다.
-- int의 범위는 **-2,147,483,648 ~ 2,147,483,647** 까지이다.
-- 선언은 **int a;** 같은 모양.
+- int의 범위는 -2,147,483,648 ~ 2,147,483,647 ****까지이다.
+
+```csharp
+using static System.Console; //네임 스페이스. 후에 알아볼 것이니 일단 무시하자.
+
+static class SharpDemo //클래스. 객체 지향 언어엔 무조건 들어가는 개념이다.
+{
+    public static void Main() //Main 함수. m이 아닌 M임을 유의한다.
+    {
+				int a; //int 형 변수 a 선언.
+				int b = 10; //int 형 변수 b 선언, 10으로 값을 초기화.
+    }
+}
+```
+
+- 위의 코드를 보면 a와 b 모두 int 형으로 선언한 모습이 보인다. 다만 a엔 값을 따로 초기화 하지 않았는데 이럴 경우 a에겐 쓰레기 값이 저장되게 된다.
 
 ## 🖇 long
 
 ---
 
-- 가장 긴 범위를 가진 정수형 선언이다.
-- long의 범위는 **–9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807** 까지이다.
-- 선언은 **long a;** 같은 모양.
+- **가장 긴 범위**를 가진 정수형 선언이다.
+- long의 범위는 –9,223,372,036,854,775,808 ~ 9,223,372,036,854,775,807 까지이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				long a; //long 형 변수 a 선언.
+				long b = **9223372036854775807**; //long 형 변수 b 선언, 값을 초기화.
+    }
+}
+```
+
+- long은 **C의 longlong과 똑같은 거**라 보면 된다.
 
 ## 💿 byte / sbyte
 
 ---
 
 - int보다 범위가 작은 형식.
-- byte의 범위는 **0 ~ 255**,  sbyte의 범위는 **–128 ~ 127** 까지이다.
-- 사람의 나이와 같은 **크기가 작은 값들**에 주로 이용.
+- 이걸 쓰는 사람을 본적이 없지만, 굳이 쓴다면 **사람의 나이와 같은** 크기가 작은 값들에 이용한다.
+- byte의 범위는 0 ~ 255,  sbyte의 범위는 –128 ~ 127 까지이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				byte a = 255;
+				sbyte b = -128;
+    }
+}
+```
+
+- byte의 범위에 음수가 없는 이유는 바로 뒤에 나올 **부호가 없는 정수 데이터 형식**이기 때문이다.
 
 ## ➕ unsigned
 
 ---
 
-- 정수형 변수 **형태 앞에 u를 붙이는 것**으로 unsigned 형태가 된다.(ex. uint / ulong)
-- 기존의 정수는 대부분 -(음수)의 범위까지 정해주지만 unsigned로 음수 값의 범위를 제외하는 대신 **양수값 범위를 늘릴 수 있다.**
-- 대부분 기존 양수의 범위 *2의 값 만큼 확장된다.
+- **부호가 없는 정수 데이터**를 선언할 때 사용한다.
+- 음수값을 사용할 수 없는 대신 양수의 값이 늘어나게 된다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				uint a = 4292967295;
+				ulong b = 18446744073709551615;
+				ushort c = 65535;
+				byte d = 255;
+    }
+}
+```
+
+- int와 long만 보아도 알 수 있는 것은 u형태가 된 것 만으로도 **범위가 기존의 2배**가 되었음을 알 수 있다.
