--- a/C# 배우기/C# 기초문법/2-2.실수형 변수.md
+++ b/C# 배우기/C# 기초문법/2-2.실수형 변수.md
@@ -16,7 +16,18 @@
 
 - 기본적인 실수형 선언이다.
 - float의 범위는 **소수점  6 ~ 9 자리** 정도이다.
-- 선언은 **float a;** 같은 모양.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				float a; //float 형 변수 a 선언.
+    }
+}
+```
 
 ## ✌️ double
 
@@ -24,7 +35,19 @@
 
 - 가장 자주쓰이는 실수형 형태이다.
 - double의 범위는 **소수점 15 ~ 17 자리** 정도이다.
-- 선언은 **double a;** 같은 모양.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				double a = 3.1415926535;
+    }
+}
+```
+
 - **왠만하면 실수형 자료는 double을 이용하여 선언하자.**
 
 ## 💿 decimal
@@ -34,4 +57,15 @@
 - 금융 등의 정확한 값이 필요할 때 쓰는 형태
 - decimal의 범위는 소수점 28 ~ 29 자리 정도이다.
 - 사람의 나이와 같은 값의 크기가 작은 값들에 주로 이용.
-- 선언은 **decimal a;** 같은 모양.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				decimal a = 9.1234567891234678;
+    }
+}
+```
