--- a/C# 배우기/C# 기초문법/2-4.그 외의 자료형.md
+++ b/C# 배우기/C# 기초문법/2-4.그 외의 자료형.md
@@ -13,20 +13,50 @@
 
 ## 1️⃣ bool
 
-- 논리 데이터 형식이라고도 한다.
-- 저장되는 값은 오로지 true / false 둘 뿐이다.
-- 선언은 **bool a;** 같은 모양.
+---
+
+- **논리 데이터** 형식이라고도 한다.
+- 저장되는 값은 오로지 **true / false** 둘 뿐이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				bool a = true;
+				bool b = false;
+    }
+}
+```
+
+- bool의 경우 **if문과 함께 사용**하는 경우가 대부분이다.
 
 ## 🌎 var
 
 ---
 
-- C#에서 편리하게 변수를 사용하라고 만든 자료형으로 입력받은 값을 컴퓨터가 보고 적절한 형태로 변환시켜준다.
-- 다만 모든 형태를 지원하는 것은 아니니 정수/실수/문자/문자열 정도만 쓰면 편하다.
+- 참조타입의 변수이다.
+- 참조타입은 기존의 값을 받는 변수와는 다르니 이 페이지에선 따로 서술하지 않겠다.
 
 ## ✌️ 변하지 않는 값: 상수
 
 ---
 
 - 코딩을 하다보면 가끔 절대로 바뀌지 말아야 할 값이 있어야 할 때가 있다. 이 때 쓸 수 있는 것이 바로 상수형이다.
-- 변수 지정 시 맨 앞에 const를 붙이면 해당 변수는 상수가 된다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				const int a = 13; //값을 초기화.
+				a = 15; //상수로 선언했기 때문에 오류가 난다.
+    }
+}
+```
+
+- 위 코드에서 a는 상수형이기 때문에 후에 바꾸거나 할 수 없다.
