--- a/C# 배우기/C# 기초문법/1-2.출력.md
+++ b/C# 배우기/C# 기초문법/1-2.출력.md
@@ -13,9 +13,20 @@
 
 ---
 
-- 가장 기본적인 출력 방법이다.
-- 괄호 안에 넣은 내용을 출력한다.
-- WriteLine의 경우 출력을 한 후 **자동으로 줄바꿈**을 해주는 기능을 가진다.
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				WriteLine("C# Notion");
+				WriteLine("         ");
+    }
+}
+```
+
+- 위 코드를 실행해보면 자동으로 줄바꿈을 해주는 것을 볼 수 있다.
 
 ## ↘️ Console.Write()
 
@@ -23,27 +34,45 @@
 
 - WriteLine이 줄바꿈을 해준다면 Write는 **줄바꿈 기능이없는 순수한 출력 함수**이다.
 
-## 🚨 자리표시자
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				Write("C# Notion");
+				Write("         ");
+    }
+}
+```
+
+## 🚨 문자열 보간
 
 ---
 
-- WriteLine(”{0}”, “Hello”); 라는 문장에서  {0}의 역할은 뒤에 있는 Hello의 자리임을 표시한다.
-- 변수의 자리표시자를 정하고 싶다면 **WriteLine($”{변수 이름}”);** 의 꼴로 쓸 수 있다.
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int a = 10;
+				WriteLine($"a = {a}");
+    }
+}
+```
+
+- 변수를 출력하는 여러 방법 중 하나이다. $”” 안에 {}에 변수를 넣으면 변수의 값이 출력된다.
 
 ## 🛹 이스케이프 시퀀스
 
 ---
 
+- C 수업에서도 얼추 배웠을 명령어들이다. C#에서나 어디서나 다 똑같다.
 - **\n : 줄바꿈**
 - **\t : 탭 들여쓰기**
 - \r : 캐리지 리턴(줄의 시작으로 이동)
 - \’ : 작은 따옴표
 - \” : 큰따옴표
-
-## 이진수 출력
-
----
-
-- x = 10의 이진수를 나타내고 싶다면 Convert.ToString(x, 2)를 입력해야된다.
-- 이 때 앞의 자리가 0 이라면 생략하기 때문에 보기 쉽도록 뒤에 .PadLeft(4, ‘0’)을 입력하면 4비트로 표현된다.
-- Convert.ToString() .PadLeft()는 공식이라 생각하고 외우면 편하다.
