--- a/C# 배우기/C# 기초문법/4.조건 제어문.md
+++ b/C# 배우기/C# 기초문법/4.조건 제어문.md
@@ -19,6 +19,32 @@ C#의 조건문들을 정리한 페이지
 ---
 
 - 조건을 판별하는 가장 기본적인 조건문이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				bool a = false;
+				
+				if(a == false)
+				{
+						a = true;
+				}
+				else if(a == true)
+				{
+						a = false;
+				}
+				else
+				{
+						a = null;
+				}
+    }
+}
+```
+
 - 형식은 **if(조건문)**이고 else는 조건이 따로 붙지 않는다.
 - if문엔 **if, else if, else**가 있다.
 
@@ -28,6 +54,27 @@ C#의 조건문들을 정리한 페이지
 
 - 값1~값n까지의 조건중 참인 것이 있으면 수행하는 조건문.
 - 대부분 작은 범위의 정수나 문자를 판별할 때 쓰인다.
-- **switch** 안엔 여러개의 **case**문이 있고 각 **case 안에는 break가 있어야 한다**.
-- **어디에도 해당하지 않을 땐 default문**에 들어가고 이땐 break를 붙이지 않아도 된다.
-- 형식은 C와 똑같다.(자세히 서술하지 않는 이유는 난 이거 잘 안써서.)
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int a = 1;
+				
+				switch(a)
+        {
+            case 1:
+                num++;
+                break;
+						case 2:
+                num++;
+                break;
+						default
+								num = 0; //default엔 break가 안들어간다.
+        }
+    }
+}
+```
