--- a/C# 배우기/C# 기초문법/5.반복문.md
+++ b/C# 배우기/C# 기초문법/5.반복문.md
@@ -19,7 +19,23 @@ C#의 반복문들을 정리한 페이지
 ---
 
 - 대표적인 계수 기반 반복문이다.
-- C와 반복문의 구조는 같이 **for(시작 ; 조건문 ; 증감식)**으로 이루어진다.
+- C와 반복문의 구조는 같고, **for(시작 ; 조건문 ; 증감식)**으로 이루어진다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				for(int i = 0 ; i <= 10 ; i++)
+				{
+						WriteLine(i);
+				}
+    }
+}
+```
+
 - **for( ; ; )의 형태로 무한반복**이 된다.
 
 ## 🔌 while 문
@@ -28,11 +44,44 @@ C#의 반복문들을 정리한 페이지
 
 - while문은 **조건식이 참일 때만 반복**을 한다.
 - for문은 자동으로 증감식이 작동되었지만, while문은 증감식을 문장 안에 넣어야한다.
-    
-    ### do while문
-    
-    - do while은 while과 다르게 조건에 맞지 않아도 **일단은 한번 실행하는 while문**이다.
-    - 때문에 do while문의 **조건식은 문장의 맨 아래에 있다.**
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int i = 0
+				while(i > 10)
+				{
+						WriteLine(i);
+						i++;
+				}
+    }
+}
+```
+
+### do while문
+
+- do while은 while과 다르게 조건에 맞지 않아도 **일단은 한번 실행하는 while문**이다.
+- 때문에 do while문의 **조건식은 문장의 맨 아래에 있다.**
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int i = 10
+				do
+				{
+						WriteLine(i);
+				}while(i < 1) //while문의 조건에 맞지 않아도 일단은 실행된다.
+    }
+}
+```
 
 ## 🗃️ foreach 문
 
@@ -49,4 +98,4 @@ C#의 반복문들을 정리한 페이지
 - 반복 제어문은 반복문 안에서도 상황에 따라 반복문의 내용을 제어하는 역할을 한다.
 - break : 반복문 혹은 switch문이 해당 명령어가 실행되었을 때 **종료됨을 의미.**
 - continue : 반복문이 해당 명령어가 실행되었을 때 문장의 **처음으로 돌아감을 의미.**
-- goto : 레이블: 로 일종의 와드를 정해두고 실행시 해당 와드부터 다시 실행됨을 의미.
+- goto : 레이블: 로 일종의 와드를 정해두고 실행시 해당 와드부터 다시 실행됨을 의미. goto의 경우 잘못 사용하면 스파게티 코드가 되어 가독성이 떨어지는 경우가 발생한다.
