--- a/C# 배우기/C# 기초문법/7.함수.md
+++ b/C# 배우기/C# 기초문법/7.함수.md
@@ -19,15 +19,23 @@ WriteLine같은 이미 사용하던 명령어들도 다 함수이다.
 
 ---
 
-- **static void 함수 이름(매개 변수)**
-    
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+		public void Function() //함수를 선언하는 방법이다.
+		{
+				WriteLine("함수 호출");
+		}
+    public static void Main()
     {
+				Function();
     }
-    
-    와 같은 형태를 취한다.
-    
-- return을 이용한 반환값이 있을 경우 **반환값의 형식에 맞게 void말고 다른 형태를 써야한다.**
-- 함수의 코드가 한줄인 경우 함수 선언 옆에 **⇒**를 붙이면 중괄호를 쓰지 않아도 된다.
+}
+```
+
+- 사실상 C와 크게 다를 것이 없다. 객체 지향으로 넘어오며 public 자리한정자가 붙긴 했지만 이는 나중에 알아보자.
 
 ## 함수 오버로드
 
@@ -37,6 +45,31 @@ WriteLine같은 이미 사용하던 명령어들도 다 함수이다.
     
     오버로드라는 개념이 있다.
     
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+		public int Function(int a)
+		{
+				return a++;
+		}
+		public char Function(char c)
+		{
+				c = "C";
+				return c
+		}
+    public static void Main()
+    {
+				int a = 10;
+				WriteLine(Function(a));
+				char c = "A";
+				WriteLine(Function(c));
+    }
+}
+```
+
 - 오버로드는 다수의 개발자가 한 프로그램을 짤 시 서로가 함수 이름을 같게 했을 때 오류를 막을 수 있다.
 
 ## 재귀함수
@@ -53,3 +86,17 @@ WriteLine같은 이미 사용하던 명령어들도 다 함수이다.
 - **함수 안에서 선언하는 변수는 지역 변수**, 밖에서 선언하는 변수를 전역 변수라고 한다.
 - 지역 변수는 해당 함수 안에서만 사용할 수 있지만 **전역 변수는 여러 함수에서 사용이 가능**하다.
 - **전역변수는 필드**라고도 하며 다음에 자세히 다룰 예정이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+		public int a = 10; //함수 밖에서 선언하는 전역 변수
+    public static void Main()
+    {
+				int b = 10; //Main이라는 함수 안에 선언하는 지역 변수.
+				WriteLine($"전역 변수 : {a}, 지역 변수 : {b}");
+		}
+}
+```
