--- a/C# 배우기/C# 기초문법/6.배열.md
+++ b/C# 배우기/C# 기초문법/6.배열.md
@@ -20,11 +20,23 @@ C와 달라지는 점은 선언에서 갈린다.
 ---
 
 - 이름 하나로 **여러개의 변수를 저장하는 데이터 구조**이다.
-- 선언은 **int[] a = new int[배열크기];** 와 같은 형태이다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int arr[5] = {10, 20, 30, 40, 50}; //인덱스는 0~4까지.
+    }
+}
+```
+
 - 배열의 값이 들어가는 공간 한칸 한칸을 **인덱스**라고 한다.
-- 이 인덱스는 n크기의 배열을 선언할 시 **0부터 n-1**까지 생성된다.
-- 선언 동시에 값을 넣고싶다면 **{값}**을 변수 선언 맨 뒤에 붙여주면 된다.
-- **하나라도 값을 초기화 하면 나머지 값들은 모두 0 / null로 초기화 된다.**
+- 인덱스에서 주의할 점은 0부터 시작함을 주의해야된다.
+- {} 안에는 값을 넣을 수 있다.
+- **하나라도 값을 초기화 하면 나머지 값들은 모두 숫자형이면 0 / 문자면 null로 초기화 된다.**
 
 ## 🔌 다차원 배열
 
@@ -32,5 +44,18 @@ C와 달라지는 점은 선언에서 갈린다.
 
 - **배열의 차원이 2 이상인 것**을 다차원 배열이라 한다.
 - **int[,] a = new int[행크기, 열크기]**와 같이 선언한다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int arr[5][3] = {{10, 20, 30, 40, 50}, {60, 70, 80, 90, 100}, {110, 120, 130, 140, 150}}; //인덱스는 0~4까지.
+	  }   //이차원 배열. 
+}
+```
+
 - 행은 세로줄 열은 가로줄이다.
-- 위의 선언은 2차원 배열 기준으로 차원이 높아질수록 []안의 ,의 갯수가 늘어난다.
+- 배열의 경우 C#은 컬렉션과 동일 취급을 받는다. 컬렉션은 후에 아
