--- a/C# 배우기/C# 기초문법/5.반복문.md
+++ b/C# 배우기/C# 기초문법/5.반복문.md
@@ -26,13 +26,35 @@ using static System.Console;
 
 static class SharpDemo
 {
-    public static void Main()
-    {
-				for(int i = 0 ; i <= 10 ; i++)
-				{
-						WriteLine(i);
-				}
-    }
+	public static void Main()
+	{
+		for (int i = 0; i <= 10; i++)
+		{using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		for (int i = 0; i <= 10; i++)
+		{
+			WriteLine(i);
+		}
+	}
+}using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		for (int i = 0; i <= 10; i++)
+		{
+			WriteLine(i);
+		}
+	}
+}
+			WriteLine(i);
+		}
+	}
 }
 ```
 
@@ -50,15 +72,32 @@ using static System.Console;
 
 static class SharpDemo
 {
-    public static void Main()
-    {
-				int i = 0
-				while(i > 10)
-				{
-						WriteLine(i);
-						i++;
-				}
-    }
+	public static void Main()
+	{
+		int i = 0;
+		while (i > 10)
+		{
+			WriteLine(i);
+			i++;using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		int i = 0;
+		do
+		{
+			i += 10;
+			WriteLine(i);
+			if (i == 10)
+			{
+				i = 1;
+			}
+		} while (i >= 10);
+	}
+}
+		}
+	}
 }
 ```
 
@@ -72,14 +111,19 @@ using static System.Console;
 
 static class SharpDemo
 {
-    public static void Main()
-    {
-				int i = 10
-				do
-				{
-						WriteLine(i);
-				}while(i < 1) //while문의 조건에 맞지 않아도 일단은 실행된다.
-    }
+	public static void Main()
+	{
+		int i = 0;
+		do //i가 10 미만임에도 일단을 실행한다.
+		{
+			i += 10;
+			WriteLine(i);
+			if (i == 10)
+			{
+				i = 1;
+			}
+		} while (i >= 10); //조건식을 마지막에 판별.
+	}
 }
 ```
 
@@ -90,6 +134,22 @@ static class SharpDemo
 - 배열 혹은 컬렉션같이 값이 여러개인 변수를 반복할 때 쓰는 C#의 독특한 반복문이다.
 - C에선 배열의 값을 출력할 때 i가 증가함에 따라 배열[i]같은 형태로 써왔다.
 - 하지만 foreach 문을 쓰면 더 간단하게 배열의 값을 출력할 수 있다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		string[] student = { "Name", "Number", "Age" }; //배열을 선언 이건 나중에 나온다.
+		foreach (string i in student) //객체 지향에서 나오는 배열을 위한 반복문.
+        {
+			WriteLine(i); //student에 들어간 값들을 출력.
+        }
+	}
+}
+```
 
 ## ↩️ 반복 제어문
 
