--- a/C# 배우기/C# 기초문법/2-4.그 외의 자료형.md
+++ b/C# 배우기/C# 기초문법/2-4.그 외의 자료형.md
@@ -33,12 +33,40 @@ static class SharpDemo
 
 - bool의 경우 **if문과 함께 사용**하는 경우가 대부분이다.
 
+## 🧱 object
+
+---
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		int i = 1234;
+		string s = "안녕하세요";
+		char c = 'A';
+		double d = 3.14;
+		object o = new object(); //object형의 선언.
+		WriteLine(i.GetType());
+		WriteLine(s.GetType());
+		WriteLine(c.GetType());
+		WriteLine(d.GetType());
+		WriteLine(o.GetType()); //GetType()은 변수의 형태를 알려주는 메서드이다.
+	}
+}
+```
+
+- object 형 변수는 내가 원하는 자료형을 알잘딱하게 변환시켜주는 형태이다.
+
 ## 🌎 var
 
 ---
 
 - 참조타입의 변수이다.
 - 참조타입은 기존의 값을 받는 변수와는 다르니 이 페이지에선 따로 서술하지 않겠다.
+- 아니다 사실 얘도 object처럼 알잘딱 형변환이 있긴 한데 잘 안쓰니 넘어가자.
 
 ## ✌️ 변하지 않는 값: 상수
 
