--- a/C# 배우기/C# 기초문법/1-1.입력.md
+++ b/C# 배우기/C# 기초문법/1-1.입력.md
@@ -5,7 +5,6 @@
 ---
 
 - C#의 입력기능을 다룬다.
-- 출력과 마찬가지로 scanf는 쓰지 않는다.
 
 ---
 
@@ -15,7 +14,19 @@
 
 - 가장 기본적인 입력 방법이다.
 - 괄호 안에 넣은 **문자열을 받아들인다.**
-- **변수를 선언 할 때 같이 값을 받을 수 있다.**
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				WriteLine(ReadLine()); //출력문에 바로 입력을 넣었다.
+				string a = ReadLine(); //변수에 입력받은 값을 저장하는 방법이다.
+    }
+}
+```
 
 ## ↘️ Console.Read()
 
@@ -23,6 +34,19 @@
 
 - ReadLine과는 다르게 **문자 하나만 받을 수 있다.**
 - 다만 Read도 ReadLine도 기본적으론 **모두 문자형 자료만 받아들일 수 있다.**
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int a = Read(); //문자 하나만 입력받음.
+				WriteLine(a); //받은 문자를 정수형이기 때문에 숫자로 출력함.
+    }
+}
+```
 
 ## 🌀 형식변환
 
@@ -35,26 +59,61 @@
 ### 암시적 형 변환
 
 - 말 그대로 **컴퓨터가 알아서 형 변환을 인지하는 변환**이다.
-- int a = 32;
-    
-    long b = a;
-    
-- 위와 같이 **더 큰 형태의 자료로 변환** 할 때는 자연스래 형태가 변환된다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int a = 90;
+				long b = a;
+    }
+}
+```
+
+- 각 값의 형식은 byte의 크기가 다 다르다. 더 큰 byte에 변수를 형변환 하는 것은 가능하다.
 
 ---
 
 ### 명시적 형 변환
 
-- 이는 그 반대의 상황으로, **작은 형태의 자료로 변환**시 컴퓨터에게 변환함을 명시적으로 표기해야한다.
-- long a = 1234;
-    
-    int b = **(int)**a;
-    
-- 위와 같은 꼴로 **변환할 형태를 같이 선언**해야한다.
+- 이는 그 반대의 상황으로, **작은 크기의 자료로 변환**시 컴퓨터에게 변환함을 명시적으로 표기해야한다.
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+    public static void Main()
+    {
+				int a = 1234;
+				byte b = (int)a;
+    }
+}
+```
+
+- 위와 같은 꼴로 **변환할 형태를 같이 명시**해야한다.
 
 ---
 
 ### Convert 클래스를 이용한 형 변환
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		Write("정수를 입력하세요 : ");
+		string input = ReadLine();
+		int number = Convert.ToInt32(input); //문자열 입력 -> 형 변환의 순서로 전환한다.
+		WriteLine(number);
+	}
+}
+```
 
 - **Convert.To자료형태(변수 이름)** 을 입력해도 형 변환을 할 수 있다.
 - 자료 형태에는 아래와 같은 것들이 있다.
@@ -62,7 +121,23 @@
     2. Int32 (정수)
     3. Double (실수)
     4. Char (문자)
-- 다만 이것보단 Convert와 같은 기능을 하는 **자료형태.Parse()를 사용하는 것을 추천한다.**
+
+```csharp
+using static System.Console;
+
+static class SharpDemo
+{
+	public static void Main()
+	{
+		Write("실수를 입력하세요 : ");
+		string input = ReadLine();
+		double number = double.Parse(input);
+		WriteLine(number);
+	}
+}
+```
+
+- 나는 위와 같은 입력 방법을 추천한다.
 
 ## ◼️ default
 
