--- a/C# 배우기/C# 기초문법/7.함수.md
+++ b/C# 배우기/C# 기초문법/7.함수.md
@@ -24,18 +24,21 @@ using static System.Console;
 
 static class SharpDemo
 {
-		public void Function() //함수를 선언하는 방법이다.
-		{
-				WriteLine("함수 호출");
-		}
-    public static void Main()
-    {
-				Function();
-    }
+	public static void Function() //함수를 선언하는 방법이다.
+	{
+		WriteLine("함수 호출");
+	}
+	public static void Main()
+	{
+		Function();
+	}
 }
 ```
 
 - 사실상 C와 크게 다를 것이 없다. 객체 지향으로 넘어오며 public 자리한정자가 붙긴 했지만 이는 나중에 알아보자.
+- static의 경우 조금 생소할 수 있다. C#에게 있어서 static이 붙고 안붙고는 큰 차이이다.
+    - static이 붙은 경우는 쉽게 말해 하이패스라고 할 수 있다. 아무 객체를 만들 필요도 없이 바로 호출할 수 있는 경우이다.
+    - 아닌 경우는 인스턴스라 하는 객체를 참조하여 일종의 출입증을 발증해야한다.
 
 ## 함수 오버로드
 
@@ -51,22 +54,22 @@ using static System.Console;
 
 static class SharpDemo
 {
-		public int Function(int a)
-		{
-				return a++;
-		}
-		public char Function(char c)
-		{
-				c = "C";
-				return c
-		}
-    public static void Main()
-    {
-				int a = 10;
-				WriteLine(Function(a));
-				char c = "A";
-				WriteLine(Function(c));
-    }
+	public static int Function(int a)
+	{
+		return a++;
+	}
+	public static char Function(char c)
+	{
+		c = 'C';
+		return c;
+	}
+	public static void Main()
+	{
+		int a = 10;
+		WriteLine(Function(a));
+		char c = 'A';
+		WriteLine(Function(c));
+	}
 }
 ```
 
@@ -92,11 +95,11 @@ using static System.Console;
 
 static class SharpDemo
 {
-		public int a = 10; //함수 밖에서 선언하는 전역 변수
-    public static void Main()
-    {
-				int b = 10; //Main이라는 함수 안에 선언하는 지역 변수.
-				WriteLine($"전역 변수 : {a}, 지역 변수 : {b}");
-		}
+	static string a = "전역 변수"; //함수 밖에서 선언하는 전역 변수
+	public static void Main()
+	{
+		string b = "지역 변수"; //Main이라는 함수 안에 선언하는 지역 변수.
+        WriteLine($"{a}, {b}");
+	}
 }
 ```
