--- a/C# 배우기/C# 기초문법/4.조건 제어문.md
+++ b/C# 배우기/C# 기초문법/4.조건 제어문.md
@@ -25,23 +25,23 @@ using static System.Console;
 
 static class SharpDemo
 {
-    public static void Main()
-    {
-				bool a = false;
-				
-				if(a == false)
-				{
-						a = true;
-				}
-				else if(a == true)
-				{
-						a = false;
-				}
-				else
-				{
-						a = null;
-				}
-    }
+	public static void Main()
+	{
+		bool a = false;
+
+		if (a == false)
+		{
+			a = true;
+		}
+		else if (a == true)
+		{
+			a = false;
+		}
+		else
+		{
+			WriteLine("else는 나머지 조건입니다.");
+		}
+	}
 }
 ```
 
@@ -62,18 +62,16 @@ static class SharpDemo
 {
     public static void Main()
     {
-				int a = 1;
-				
-				switch(a)
+        int a = 1;
+
+        switch (a)
         {
             case 1:
-                num++;
+                a++;
                 break;
-						case 2:
-                num++;
-                break;
-						default
-								num = 0; //default엔 break가 안들어간다.
+            case 2:
+                a++;
+                break;s
         }
     }
 }
